--- a/ending/end.css
+++ b/ending/end.css
@@ -1,29 +1,59 @@
 html {
+  font-family: 'IBM Plex Sans Thai Looped', sans-serif;
   background-image: linear-gradient(hsl(0, 0%, 100%) ,hsl(34, 100%, 90%));
   background-repeat: no-repeat;
-  font-family: 'IBM Plex Sans Thai Looped', sans-serif;
-  height: 100%;
+  height: 101%;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
-/* body{
-  height: 300px;
-} */
+body{
+  overflow: hidden;
+  margin: 0; 
+}
 .end_1{
   /* background-color: hsl(34, 84%, 48%); */
   margin: 0px;
   width: 100%;
 }
-.food{
-  width: 98%;
+/* .food{
+  width: 100%;
   margin-top: 25vw;
+  position: absolute;
+  left: calc(100% - (50% / 2));
+  bottom: 0%;
+}
+.food_mo{
+  width: 100%;
+  margin-top: 97%;
+  position: absolute;
+} */
+
+.food1{
+  width: 98%;
+  margin-top: 5vw;
+  position: absolute;
+}
+.food_mo1{
+  width: 100%;
+  top:60%;
   position: absolute;
 }
 
-
-#animationContainer {
+#Container_all {
   width: 98%;
-  height: 700px;
+  height: 100%;
   overflow: hidden;
   position: absolute;
+}
+
+#animationContainer {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  position: absolute;
+  margin: 0px;
 }
 
 .rotateImage {
@@ -45,6 +75,7 @@ html {
 }
 .rotateImage:nth-child(3) {
   animation: moveRotate 5s linear infinite;
+  
   left: 41%;
 }
 .rotateImage:nth-child(4) {
@@ -59,6 +90,41 @@ html {
   animation: moveRotate 4s linear infinite;
   left: 89%;
 }
+/* ตราไอที */
+/* .rotateImage:nth-child(7) {
+  animation: moveRotate 9s linear infinite;
+  left: 50%;
+} */
+/* ตราสถาปัตย์ */
+/* .rotateImage:nth-child(8) {
+  animation: moveRotate 7s linear infinite;
+  left: 64%;
+} */
+.rotateImage:nth-child(9) {
+  animation: moveRotate 6s linear infinite;
+  left: -5%;
+}
+.rotateImage:nth-child(10) {
+  animation: moveRotate 9s linear infinite;
+  left: 17%;
+}
+.rotateImage:nth-child(11) {
+  animation: moveRotate 5s linear infinite;
+  left: 33%;
+}
+.rotateImage:nth-child(12) {
+  animation: moveRotate 7s linear infinite;
+  left: 49%;
+}
+.rotateImage:nth-child(13) {
+  animation: moveRotate 5s linear infinite;
+  left: 67%;
+}
+.rotateImage:nth-child(14) {
+  animation: moveRotate 4s linear infinite;
+  left: 84%;
+}
+
 @keyframes moveRotate {
   0% {
     transform: translateY(-100px) rotate(0deg);
@@ -119,7 +185,101 @@ html {
   color: #704123;
 }
 
-.logo{
-  width: 100px;
-  margin-left: 92%;
+
+.logo_1{
+  width: 120px;
+  margin-top: 1%;
+  margin-left: 90%;
   position: absolute;
+}
+.logo_2{
+  width: 120px;
+  margin-top: 1%;
+  margin-left: 90%;
+  position: absolute;
+}
+.logo_1{
+  width: 120px;
+  margin-top: 1%;
+  margin-left: 90%;
+  position: absolute;
+}
+.logo_2{
+  width: 120px;
+  margin-top: 1%;
+  margin-left: 70%;
+  position: absolute;
+}
+
+
+.desktop {
+  display: none;
+}
+
+.mobile {
+  width: auto;
+  display: block;
+}
+
+@media screen and (min-width: 768px) {
+    .desktop {
+        display: block;
+    }
+
+    .mobile {
+        display: none;
+    }
+}
+
+.text_5{
+  position: absolute;
+  width: 100%;
+  /* overflow-x: hidden; */
+  justify-content: center;
+  text-align: center;
+  top: 15%;
+  /* left:7%; */
+  font-size: 2.3rem;
+  color: #704123;
+}
+
+.text_6{
+  position: absolute;
+   width: 100%;
+  /* width: 100vw;
+  overflow-x: hidden; */
+  justify-content: center;
+  text-align: center;
+  top: 30%;
+  /* left:7%; */
+  font-size: 1rem;
+  color: #704123;
+}
+
+.text_7{
+  position: absolute;
+  width: 100%;
+  /* width: 100vw;
+  overflow-x: hidden; */
+  justify-content: center;
+  text-align: center;
+  top: 40%;
+  /* left:10%; */
+  font-size: 1rem;
+  color: #704123;
+}
+
+.text_8{
+  position: absolute;
+  /* width: 100%; */
+  /* width: 100vw;
+  overflow-x: hidden; */
+  /* justify-content: center;
+  text-align: center; */
+  top: 60%;
+  left:10%;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: opacity 0.5s ease-in-out;
+  color: #704123;
+}
